--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -14,6 +14,11 @@ body {
         letter-spacing: 1rem;
         color: $color-grey-dark-3;
         text-transform: uppercase;
+
+        @include respond(phone) {
+            font-size: 2rem;
+            letter-spacing: normal;
+        }
     }
 
     &__sub {
@@ -24,6 +29,11 @@ body {
         letter-spacing: 1rem;
         color: $color-grey-dark-2;
         text-transform: lowercase;
+
+        @include respond(phone) {
+            font-size: 1.5rem;
+            letter-spacing: normal;
+        }
     }
 }
 
