--- a/sass/components/_memories.scss
+++ b/sass/components/_memories.scss
@@ -9,6 +9,7 @@
     visibility: hidden;
     transition: all .3s;
     backdrop-filter: blur(10px);
+    z-index: 3000;
 
     &__lovedOne {
         @include center;
@@ -22,6 +23,12 @@
         transition: all .5s;
         border-radius: 3px;
         background-color: rgba($color-grey-dark-3, .8);
+        
+
+        @include respond(phone) {
+            height: 90%;
+            width: 90%;
+        }
         
 
         &-text {
@@ -40,6 +47,10 @@
                 color: $color-grey-light-2;
                 text-align: justify;
                 line-height: 1.3;
+
+                @include respond(phone) {
+                    font-size: 1.7rem;
+                }
             }
         }
     }
@@ -120,6 +131,8 @@
         opacity: 1;
         visibility: visible;
     }
+
+
 
     &:target &__lovedOne {
         opacity: 1;
