--- a/sass/components/_photos.scss
+++ b/sass/components/_photos.scss
@@ -7,6 +7,11 @@
         flex: 20%;
         max-width: 20%;
         padding: 0;
+
+        @include respond(phone) {
+            flex: 100%;
+            max-width: 100%;
+        }
     }
 
     &__wrapper {
