--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,11 @@
 .header {
     padding: 5rem 0 5rem;
 
+    @include respond(phone) {
+        padding-top: 10rem;
+        padding-bottom: 0rem;
+    }
+
     &__textBox {
         text-align:center;
     }
