--- a/sass/components/_photos.scss
+++ b/sass/components/_photos.scss
@@ -37,6 +37,10 @@
         transition: all .3s;
         display: flex;
 
+        @include respond(phone) {
+            opacity: 1;
+        }
+
         &:link,
         &:focus,
         &:visited {
