--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -25,6 +25,11 @@
         opacity: 0;
         transform: translate(-50%, -50%) scale(0);
         transition: all .5s;
+
+        @include respond(phone) {
+            width: 90%;
+            height: 90%;
+        }
     }
 
     &__text {
@@ -36,6 +41,12 @@
         padding: 10rem;
         position: relative;
         left: 50%;
+
+        @include respond(phone) {
+           width: 50%;
+           left: 10%;
+           top: 30%;
+        }
     }
 
     // OPEN STATES 
@@ -65,6 +76,12 @@
             transition: all .2s;
             line-height: 1;
             z-index: 3001;
+
+            @include respond(phone) {
+                color: $color-secondary-light;
+                top: .5rem;
+                right: 1.5rem;
+            }
         }
 
         &:hover {
@@ -81,6 +98,11 @@
             text-transform: uppercase;
             display: inline-block;
             transition: all .2s;
+
+            @include respond(phone) {
+                color: $color-secondary-light;
+                opacity: 1;
+            }
         }
 
         &:hover,
