--- a/sass/components/_construction.scss
+++ b/sass/components/_construction.scss
@@ -1,28 +1,39 @@
 .construction {
-    width: 55%;
+    width: 100%;
     text-align: center;
 
     &__header {
         letter-spacing: 1rem;
         font-size: 3rem;
-        color: $color-secondary-light !important;
+        color: $color-secondary-light-2 !important;
         padding: 2rem;
+
+        @include respond(phone) {
+            letter-spacing: normal;
+            font-size: 2rem;
+            padding: 3rem;
+        }
     }
 
     &__text {
         color: #eee;
         font-size: 2rem;
         padding-bottom: 4rem;
+
+        @include respond(phone) {
+            padding-bottom: 2rem !important;
+        }
     }
 
     &__link {
         &:link,
         &:visited {
         text-decoration: none;
-        color: $color-secondary-light-2;
+        color: $color-secondary-light;
         display: inline-block;
         transition: all .2s;
         }
+
         &:hover,
         &:active {
             color: $color-secondary-light;
