--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -25,6 +25,10 @@
         opacity: 0;
         transform: translate(-50%, -50%) scale(0);
         transition: all .5s;
+
+        @include respond(phone) {
+            width: 90%;
+        }
     }
 
     &__text {
@@ -36,6 +40,12 @@
         padding: 10rem;
         position: relative;
         left: 30%;
+
+        @include respond(phone) {
+            width: 50%;
+            left: 25%;
+            padding: 6rem;
+        }
     }
 
     // OPEN STATES 
@@ -65,6 +75,13 @@
             transition: all .2s;
             line-height: 1;
             z-index: 3001;
+
+            @include respond(phone) {
+                color: $color-secondary-light;
+                top: .5rem;
+                right: 1.5rem;
+                font-size: 3rem;
+            }
         }
 
         &:hover {
@@ -81,6 +98,10 @@
             text-transform: uppercase;
             display: inline-block;
             transition: all .2s;
+
+            @include respond(phone) {
+            color: $color-secondary-light-2;
+            }
         }
 
         &:hover,
