--- a/sass/components/_credits.scss
+++ b/sass/components/_credits.scss
@@ -54,6 +54,10 @@
             transition: all .2s;
             line-height: 1;
             z-index: 3001;
+
+            @include respond(phone) {
+                color: $color-secondary-light;
+            }
         }
 
         &:hover {
