--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -79,6 +79,11 @@
             text-decoration: none;
             text-transform: uppercase;
             transition: all .4s;
+
+            @include respond(phone) {
+                font-size: 1.6rem;
+                font-weight: 400;
+            }
         }
 
         &:hover,
