--- a/sass/main.css
+++ b/sass/main.css
@@ -129,6 +129,13 @@ p {
   transition: all .5s;
 }
 
+@media (max-width: 25em) {
+  .about__content {
+    width: 90%;
+    height: 90%;
+  }
+}
+
 .about__text {
   background-color: transparent;
   color: #eee;
@@ -138,6 +145,14 @@ p {
   padding: 10rem;
   position: relative;
   left: 50%;
+}
+
+@media (max-width: 25em) {
+  .about__text {
+    width: 50%;
+    left: 10%;
+    top: 30%;
+  }
 }
 
 .about:target {
@@ -165,6 +180,14 @@ p {
   z-index: 3001;
 }
 
+@media (max-width: 25em) {
+  .about__close:link, .about__close:visited {
+    color: #ffb900;
+    top: .5rem;
+    right: 1.5rem;
+  }
+}
+
 .about__close:hover {
   color: #ff7730;
   cursor: pointer;
@@ -177,6 +200,13 @@ p {
   display: inline-block;
   -webkit-transition: all .2s;
   transition: all .2s;
+}
+
+@media (max-width: 25em) {
+  .about__link:link, .about__link:visited {
+    color: #ffb900;
+    opacity: 1;
+  }
 }
 
 .about__link:hover, .about__link:active {
@@ -219,15 +249,23 @@ p {
 }
 
 .construction {
-  width: 55%;
+  width: 100%;
   text-align: center;
 }
 
 .construction__header {
   letter-spacing: 1rem;
   font-size: 3rem;
-  color: #ffb900 !important;
+  color: #ffdd80 !important;
   padding: 2rem;
+}
+
+@media (max-width: 25em) {
+  .construction__header {
+    letter-spacing: normal;
+    font-size: 2rem;
+    padding: 3rem;
+  }
 }
 
 .construction__text {
@@ -236,9 +274,15 @@ p {
   padding-bottom: 4rem;
 }
 
+@media (max-width: 25em) {
+  .construction__text {
+    padding-bottom: 2rem !important;
+  }
+}
+
 .construction__link:link, .construction__link:visited {
   text-decoration: none;
-  color: #ffdd80;
+  color: #ffb900;
   display: inline-block;
   -webkit-transition: all .2s;
   transition: all .2s;
@@ -288,6 +332,12 @@ p {
   transition: all .5s;
 }
 
+@media (max-width: 25em) {
+  .contact__content {
+    width: 90%;
+  }
+}
+
 .contact__text {
   background-color: transparent;
   color: #eee;
@@ -297,6 +347,14 @@ p {
   padding: 10rem;
   position: relative;
   left: 30%;
+}
+
+@media (max-width: 25em) {
+  .contact__text {
+    width: 50%;
+    left: 25%;
+    padding: 6rem;
+  }
 }
 
 .contact:target {
@@ -324,6 +382,15 @@ p {
   z-index: 3001;
 }
 
+@media (max-width: 25em) {
+  .contact__close:link, .contact__close:visited {
+    color: #ffb900;
+    top: .5rem;
+    right: 1.5rem;
+    font-size: 3rem;
+  }
+}
+
 .contact__close:hover {
   color: #ff7730;
   cursor: pointer;
@@ -336,6 +403,12 @@ p {
   display: inline-block;
   -webkit-transition: all .2s;
   transition: all .2s;
+}
+
+@media (max-width: 25em) {
+  .contact__link:link, .contact__link:visited {
+    color: #ffdd80;
+  }
 }
 
 .contact__link:hover, .contact__link:active {
@@ -405,6 +478,12 @@ p {
   transition: all .2s;
   line-height: 1;
   z-index: 3001;
+}
+
+@media (max-width: 25em) {
+  .credits__close:link, .credits__close:visited {
+    color: #ffb900;
+  }
 }
 
 .credits__close:hover {
@@ -840,9 +919,10 @@ img {
   margin: 0 auto;
   -webkit-box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.7);
           box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.7);
-  /* background: url(/img/candle-small-flip.jpg), rgba($color-black, .4); */
-  background-size: cover;
-  background-position: bottom;
+  background-color: rgba(0, 0, 0, 0.5);
+  /* background: url(/img/candle-small-flip.jpg), rgba($color-black, .4);
+        background-size: cover;
+        background-position: bottom; */
   border-radius: 3px;
   font-size: 1.6rem;
   overflow: hidden;
@@ -880,6 +960,15 @@ img {
   transition: all .2s;
   line-height: 1;
   z-index: 3001;
+}
+
+@media (max-width: 25em) {
+  .share__close:link, .share__close:visited {
+    font-size: 3rem;
+    top: .5rem;
+    right: 1.5rem;
+    color: #ffb900;
+  }
 }
 
 .share__close:hover {
@@ -999,6 +1088,13 @@ img {
   text-transform: uppercase;
   -webkit-transition: all .4s;
   transition: all .4s;
+}
+
+@media (max-width: 25em) {
+  .navigation__link:link, .navigation__link:visited {
+    font-size: 1.6rem;
+    font-weight: 400;
+  }
 }
 
 .navigation__link:hover, .navigation__link:active {
