Made suggested changes

--- a/sass/components/_photos.scss
+++ b/sass/components/_photos.scss
@@ -71,11 +71,27 @@
         }
     }
 
-    &__demo {
+    &__more {
+        display: flex;
         text-transform: uppercase;
         color: $color-secondary-light-2;
         text-align: justify;
         font-size: 1.3rem;
+
+        &-read {
+            padding: 0rem;
+        }
+
+        &-read > span {
+            color: $color-white;
+        }
+
+    }
+
+    
+
+    &__demo {
+        
     }
 
     &__read-more {
