--- a/sass/main.css
+++ b/sass/main.css
@@ -248,51 +248,6 @@ p {
           box-shadow: inset 0.4rem 0.4rem 0.9rem rgba(0, 0, 0, 0.8);
 }
 
-.construction {
-  width: 100%;
-  text-align: center;
-}
-
-.construction__header {
-  letter-spacing: 1rem;
-  font-size: 3rem;
-  color: #ffdd80 !important;
-  padding: 2rem;
-}
-
-@media (max-width: 31.25em) {
-  .construction__header {
-    letter-spacing: normal;
-    font-size: 2rem;
-    padding: 3rem;
-  }
-}
-
-.construction__text {
-  color: #eee;
-  font-size: 2rem;
-  padding-bottom: 4rem;
-}
-
-@media (max-width: 31.25em) {
-  .construction__text {
-    padding-bottom: 2rem !important;
-  }
-}
-
-.construction__link:link, .construction__link:visited {
-  text-decoration: none;
-  color: #ffb900;
-  display: inline-block;
-  -webkit-transition: all .2s;
-  transition: all .2s;
-}
-
-.construction__link:hover, .construction__link:active {
-  color: #ffb900;
-  cursor: pointer;
-}
-
 .contact {
   position: fixed;
   top: 0;
@@ -872,11 +827,22 @@ form {
   font-size: 2rem;
 }
 
-.photos__demo {
+.photos__more {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   text-transform: uppercase;
   color: #ffdd80;
   text-align: justify;
   font-size: 1.3rem;
+}
+
+.photos__more-read {
+  padding: 0rem;
+}
+
+.photos__more-read > span {
+  color: #fff;
 }
 
 .photos__read-more {
@@ -920,11 +886,10 @@ img {
   -webkit-box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.7);
           box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.7);
   background-color: rgba(0, 0, 0, 0.5);
-  /* background: url(/img/candle-small-flip.jpg), rgba($color-black, .4);
-        background-size: cover;
-        background-position: bottom; */
+  background: url(/img/candle-small-flip.jpg), rgba(0, 0, 0, 0.4);
+  background-size: cover;
+  background-position: bottom;
   border-radius: 3px;
-  font-size: 1.6rem;
   overflow: hidden;
   opacity: 0;
   -webkit-transform: translate(-50%, -50%) scale(0);
@@ -933,8 +898,22 @@ img {
   transition: all .5s;
 }
 
-.share__content > h2 {
-  color: #333 !important;
+.share__content-text {
+  padding: 5rem 0 5rem 5rem;
+  font-size: 2rem;
+}
+
+.share__content-link:link, .share__content-link:visited {
+  text-decoration: none;
+  color: #ffb900;
+  display: inline-block;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.share__content-link:hover, .share__content-link:active {
+  color: #ffdd80;
+  cursor: pointer;
 }
 
 .share:target {
