Changed mixin breakpoints

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -15,10 +15,10 @@
 
 // MEDIA QUERY MANAGER
 /*
-0-500px		Phone
-401-700px	Tablet
-701-900px	Netbook
-901-1600px	Current styles apply
+0-399px		Phone
+400-699px	Tablet
+700-899px	Netbook
+900-px	Current styles apply
 1600px+		Large desktops
 
 $breakpoint ARGUMENTS
@@ -31,13 +31,13 @@ $breakpoint ARGUMENTS
 */
 @mixin respond($breakpoint) {
 	@if $breakpoint == phone {
-		@media (max-width: 31.25em) { @content };
+		@media (max-width: 25em) { @content };
 	}
 	@if $breakpoint == tablet {
-		@media (max-width: 43.75em) { @content };
+		@media (max-width: 43.5em) { @content };
 	}
 	@if $breakpoint == netbook {
-		@media (max-width: 56.25em) { @content };
+		@media (max-width: 56em) { @content };
 	}
 	@if $breakpoint == lg-desk {
 		@media (min-width: 100em) { @content };
