--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,20 +7,20 @@
 
 
 html {
-  // This defines what 1rem is i.e. 10px; 10px / 16px (browser default font size) = .625
-  font-size: 62.5%;
+  // This defines what 1rem is i.e. 12px; 12px / 16px (browser default font size) = .75
+  font-size: 75%;
 
-  /* @include respond(netbook) {
+  @include respond(landscape) {
     font-size: 56.25%; //1 rem = 9px, 9/16 = 56.25%
   }
 
-  @include respond(tablet) {
+  @include respond(portrait) {
     font-size: 50%; //1 rem = 8px, 8/16 = 50%;
   }
 
-  @include respond(lg-desk) {
-    font-size: 75%; //1 rem = 12px, 12/16 = 75%
-  } */
+  @include respond(desktop) {
+    font-size: 62.5%; //1 rem = 10px, 10/16 = .625
+  }
 
 }
 
