--- a/sass/main.css
+++ b/sass/main.css
@@ -1,15 +1,17 @@
 /*
-0-500px		Phone
-401-700px	Tablet
-701-900px	Netbook
-901-1600px	Current styles apply
-1600px+		Large desktops
+0-480px		Phone
+481-680		Tablet - portrait mode
+681-1024	Tablet- landscape mode
+1025-1368	Netbook
+1369-1600	Desktop
+1601px+		Current styles apply
 
 $breakpoint ARGUMENTS
 - phone
-- tablet
+- portrait
+- landscape
 - netbook
-- lg-desk
+- desktop
 
 1em = 16px
 */
@@ -21,18 +23,25 @@ $breakpoint ARGUMENTS
 }
 
 html {
-  font-size: 62.5%;
-  /* @include respond(netbook) {
-    font-size: 56.25%; //1 rem = 9px, 9/16 = 56.25%
-  }
+  font-size: 75%;
+}
 
-  @include respond(tablet) {
-    font-size: 50%; //1 rem = 8px, 8/16 = 50%;
+@media (max-width: 64em) {
+  html {
+    font-size: 56.25%;
   }
+}
 
-  @include respond(lg-desk) {
-    font-size: 75%; //1 rem = 12px, 12/16 = 75%
-  } */
+@media (max-width: 42.5em) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 100em) {
+  html {
+    font-size: 62.5%;
+  }
 }
 
 body {
@@ -43,51 +52,30 @@ body {
   color: #777;
 }
 
-.primaryHeading__main {
-  display: block;
-  font-size: 6rem;
-  font-weight: 400;
+.primaryHeading {
   letter-spacing: 1rem;
+}
+
+@media (max-width: 30em) {
+  .primaryHeading {
+    letter-spacing: normal;
+  }
+}
+
+.primaryHeading__main {
   color: #333;
   text-transform: uppercase;
 }
 
-@media (max-width: 31.25em) {
-  .primaryHeading__main {
-    font-size: 2rem;
-    letter-spacing: normal;
-  }
-}
-
 .primaryHeading__sub {
-  display: block;
-  font-size: 2rem;
-  font-weight: 700;
-  margin-bottom: 6rem;
-  letter-spacing: 1rem;
   color: #999;
   text-transform: lowercase;
-}
-
-@media (max-width: 31.25em) {
-  .primaryHeading__sub {
-    font-size: 1.5rem;
-    letter-spacing: normal;
-  }
+  padding-bottom: 1rem;
 }
 
 .secondaryHeading {
-  padding: 5rem;
   text-align: left;
   color: #ffdd80;
-}
-
-h4 {
-  padding: 1rem;
-}
-
-p {
-  padding: 0 2rem 2rem;
 }
 
 .about {
@@ -129,7 +117,7 @@ p {
   transition: all .5s;
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .about__content {
     width: 90%;
     height: 90%;
@@ -147,7 +135,7 @@ p {
   left: 50%;
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .about__text {
     width: 50%;
     left: 10%;
@@ -180,7 +168,7 @@ p {
   z-index: 3001;
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .about__close:link, .about__close:visited {
     color: #ffb900;
     top: .5rem;
@@ -202,7 +190,7 @@ p {
   transition: all .2s;
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .about__link:link, .about__link:visited {
     color: #ffb900;
     opacity: 1;
@@ -287,7 +275,7 @@ p {
   transition: all .5s;
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .contact__content {
     width: 90%;
   }
@@ -304,7 +292,7 @@ p {
   left: 30%;
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .contact__text {
     width: 50%;
     left: 25%;
@@ -337,7 +325,7 @@ p {
   z-index: 3001;
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .contact__close:link, .contact__close:visited {
     color: #ffb900;
     top: .5rem;
@@ -360,7 +348,7 @@ p {
   transition: all .2s;
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .contact__link:link, .contact__link:visited {
     color: #ffdd80;
   }
@@ -435,7 +423,7 @@ p {
   z-index: 3001;
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .credits__close:link, .credits__close:visited {
     color: #ffb900;
   }
@@ -591,7 +579,7 @@ form {
   background-color: rgba(51, 51, 51, 0.8);
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .memory__lovedOne {
     height: 90%;
     width: 90%;
@@ -618,7 +606,7 @@ form {
   line-height: 1.3;
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .memory__lovedOne-text p {
     font-size: 1.7rem;
   }
@@ -740,7 +728,7 @@ form {
   padding: 0;
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .photos__column {
     -webkit-box-flex: 100%;
         -ms-flex: 100%;
@@ -778,7 +766,7 @@ form {
   display: flex;
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .photos__memory {
     background-color: rgba(0, 0, 0, 0.3);
     opacity: 1;
@@ -843,14 +831,6 @@ form {
 
 .photos__more-read > span {
   color: #fff;
-}
-
-.photos__read-more {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  color: #f7f7f7;
-  font-size: 1.5rem;
 }
 
 img {
@@ -941,7 +921,7 @@ img {
   z-index: 3001;
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .share__close:link, .share__close:visited {
     font-size: 3rem;
     top: .5rem;
@@ -959,7 +939,7 @@ img {
   padding: 5rem 0 5rem;
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .header {
     padding-top: 10rem;
     padding-bottom: 0rem;
@@ -997,7 +977,7 @@ img {
   padding: 1rem;
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .navigation__button {
     height: 4rem;
     width: 4rem;
@@ -1021,7 +1001,7 @@ img {
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1), -webkit-transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .navigation__background {
     height: 3rem;
     width: 3rem;
@@ -1069,7 +1049,7 @@ img {
   transition: all .4s;
 }
 
-@media (max-width: 31.25em) {
+@media (max-width: 30em) {
   .navigation__link:link, .navigation__link:visited {
     font-size: 1.6rem;
     font-weight: 400;
